--- a/Sections/CORBA.tex
+++ b/Sections/CORBA.tex
@@ -303,7 +303,7 @@ richiede che il servant sia dinamico!). Quindi, l'oggetto Request deve essere pa
 dall'utente, in maniera da ottenere l'oggetto
 desiderato (ridotta trasparenza!).
 CORBA introduce anche la possibilità di estendere dinamicamente i servizi
-oerti da un servant (è meno utilizzato). Come fare ciò in realtà non è spiegato
+offerti da un servant (è meno utilizzato). Come fare ciò in realtà non è spiegato
 (si potrebbero attivare in maniera dinamica): CORBA si preoccupa di standardizzare le interfacce. Se si avesse un
 sistema solo statico, si avrebbe che si
 dovrebbe spegnere il sistema e aggiornare staticamente i servant.
