--- a/Sections/Mobile.tex
+++ b/Sections/Mobile.tex
@@ -205,7 +205,7 @@ tose, presentando un overhead dovuto ad una comuncaizione per fare delle negozia
 perché ovviamente si cerca nel
 vicinato, per limitare il costo (non ha senso cercare nella globalità !). Si possono
 anche realizzare politiche di bidding, per ricercare un processore disponibile ad
-eseguire il processo, e scegliendo la migliore oerta proposta.
+eseguire il processo, e scegliendo la migliore offerta proposta.
 88
 Non esiste una politica migliore in assoluto: in generale, conviene avere
 un'inziativa da parte di un sender (da chi possiede il processo e che lo vorrebbe
