--- a/Sections/WS.tex
+++ b/Sections/WS.tex
@@ -57,75 +57,50 @@ un'envelope:
 La comunicazione non è necessariamente P2P ma anche molti a molti. Il problema di SOAP è che è altamente costoso (e 
 poco efficiente), perché siamo costretti a lavorare a livello applicativo.
 \subsection{WSDL}
-È il linguaggio per descrivere sia in maniera astratta che in maniera concreta
-quali servizi un provider può fornire. Descrive quindi l'interfaccia, indicando le
-`
-operazioni disponibili presso un certo provider. E una sorta di IDL. Quindi,
-WSDL riesce a descrivere in maniera precisa come una richiesta debba essere
-strutturata, e come una risposta sarà ritornata. Si può anche specificare dove il
-servizio risieda, e come lo si può invocare.
-Questo sistema, a differenza di altri già visti, impone che il cliente debba
-conoscere il servitore: viene a sapere in maniera concreta chi e come realizza
-l'operazione desiderata. Si passano quindi i dati per copia con i WS. Si ha quindi che se non si conosce un servizio, si
-può richiedere il WSDL corrispondente,
-analizzarlo, e preparare così un'apposita richiesta SOAP! Il tutto nell'ottica di
-\i{}
-ottimizzare le operazioni eseguibili da un possibile mw.
-WSDL è in grado quindi di definire due parti, una più astratta (in grado
-di definire i messaggi (insieme di elementi tipati), le operazioni (o collezione di
-messaggi), e le interfacce del servizio (insieme di operazioni)) e una più concreu
-ta, a basso livello (in grado di definire i tipi, come il servizio si lega realmente
-ad un sistema, alle sue implementazioni concrete, detto binding (che protocollo
-si usa? HTTP, TCP,. . . ), su quali nodi risiede e i service, ovvero le implementazioni delle interfacce disponbili. La
-parte astratta è flessibile, generalizzabile
-e facilmente estendibile.
-WSDL prevede diversi modi di interazione! Non solo più modi sincroni (con
-attesa di messaggio o sollecitazione da parte del client) ma anche asincroni (one-
-82
-way, o notification: cambia da chi esce il messaggio!).
-WSDL è un linguaggio molto pesante, ma che garantisce un'alta flessibilità
-quindi: permette anche di invertire i ruoli fra C e S! Tuttavia, è fondamentale
-per poter generare in maniera automatica proxy e stub, oppure per realizzare
+È il linguaggio per descrivere sia in maniera astratta che in maniera concreta quali servizi un provider può fornire.
+Descrive quindi l'interfaccia, indicando le operazioni disponibili presso un certo provider. E una sorta di IDL. 
+Quindi, WSDL riesce a descrivere in maniera precisa come una richiesta debba essere strutturata, e come una risposta
+sarà ritornata. Si può anche specificare dove il servizio risieda, e come lo si può invocare.
+Questo sistema, a differenza di altri già visti, impone che il cliente debba conoscere il servitore: viene a sapere in
+maniera concreta chi e come realizza l'operazione desiderata. Si passano quindi i dati per copia con i WS. Si ha quindi
+che se non si conosce un servizio, si può richiedere il WSDL corrispondente, analizzarlo, e preparare così un'apposita
+richiesta SOAP! Il tutto nell'ottica di ottimizzare le operazioni eseguibili da un possibile mw.
+WSDL è in grado quindi di definire due parti, una più astratta (in grado di definire i messaggi (insieme di elementi
+tipati), le operazioni (o collezione di messaggi), e le interfacce del servizio (insieme di operazioni)) e una più
+concreta, a basso livello (in grado di definire i tipi, come il servizio si lega realmente ad un sistema, alle sue
+implementazioni concrete, detto binding (che protocollo si usa? HTTP, TCP...), su quali nodi risiede e i service,
+ovvero le implementazioni delle interfacce disponbili. La parte astratta è flessibile, generalizzabile e facilmente
+estendibile.
+WSDL prevede diversi modi di interazione! Non solo più modi sincroni (con attesa di messaggio o sollecitazione da 
+parte del client) ma anche asincroni (one-way, o notification: cambia da chi esce il messaggio!).
+WSDL è un linguaggio molto pesante, ma che garantisce un'alta flessibilità quindi: permette anche di invertire i ruoli
+fra C e S! Tuttavia, è fondamentale per poter generare in maniera automatica proxy e stub, oppure per realizzare
 dei wrapper appositi per integrare facilmente sistemi legacy!
 \subsection{UDDI e WSIL}
-`
-E il servizio di nomi presente nei WS. Si tratta di un ulteriore linguaggio con
-cui poter descrivere dove risiedono i vari servizi, e come aggregare fra di loro
-più servizi. La prima informazione che si necessita è la possibilità di descrivere
-le aziende che forniscono i servizi, per permettere quindi ad un generico utente
-di poter navigare.
-Con UDDI si può infatti realizzare facilmente un sistema di pagine bianche
-(name server normale), pagine gialle (ovvero un sistema di trading, si memorizza per categorie) o infine per pagine verdi
-(sono pagine tecniche aggiuntive
-sui servizi oerti). Fondamentalmente, UDDI è un {`}name server d'alto livello',
-globale e condiviso ma non gerarchizzato. Questo aspetto presenta grossi problemi di coordinazione e di sicurezza fra i
-diversi gestori dei servizi !
-Gli attori possibili quindi per UDDI sono due: i publisher di un servizio e i
-loro requester. Vista la struttura degli UDDI, un requester dovrà navigare sina
-golarmente gli UDDI, perché appunto non vi è ridirezione fra questi! In maniera
+E il servizio di nomi presente nei WS. Si tratta di un ulteriore linguaggio con cui poter descrivere dove risiedono i
+vari servizi, e come aggregare fra di loro più servizi. La prima informazione che si necessita è la possibilità di
+descrivere le aziende che forniscono i servizi, per permettere quindi ad un generico utente di poter navigare.
+Con UDDI si può infatti realizzare facilmente un sistema di pagine bianche (name server normale), pagine gialle 
+(ovvero un sistema di trading, si memorizza per categorie) o infine per pagine verdi (sono pagine tecniche aggiuntive
+sui servizi offerti). Fondamentalmente, UDDI è un ``name server d'alto livello'', globale e condiviso ma non
+gerarchizzato. Questo aspetto presenta grossi problemi di coordinazione e di sicurezza fra i diversi gestori dei 
+servizi!
+Gli attori possibili quindi per UDDI sono due: i publisher di un servizio e i loro requester. Vista la struttura degli
+UDDI, un requester dovrà navigare singolarmente gli UDDI, perché appunto non vi è ridirezione fra questi! In maniera
 particolare, per aggiungere sicurezza si dovrebbe memorizzare e garantire il publisher!
-A tale proposito è stato pensato WSIL, dove si rovesciano le responsabilità:
-in questo modo è il provider a dover garantire sicurezza, e non è più compito di
-e u
-un eventuale server dei servizi verificare l'identità dei provider. Si tratta quindi
-di un protocollo alternativo, in grado di realizzare un sistema decentralizzato,
-leggero e non focalizzato sul business. In maniera analoga ad UDDI, sfrutta
-WSDL per descrivere i servizi!
+A tale proposito è stato pensato WSIL, dove si rovesciano le responsabilità: in questo modo è il provider a dover
+garantire sicurezza, e non è più compito di un eventuale server dei servizi verificare l'identità dei provider. Si
+tratta quindi di un protocollo alternativo, in grado di realizzare un sistema decentralizzato, leggero e non 
+focalizzato sul business. In maniera analoga ad UDDI, sfrutta WSDL per descrivere i servizi!
 \subsection{Considerazioni finali sui WS}
-I protocolli realizzati dal W3C sono molto apprezzati da diverse organizzazioni,
-come le banche in Italia. Tuttavia, i WS presentano un alto overhead rispetto ad
-altre tecnologie (è possibile che non sia una comunicazione limitata a due attori,
-e si lavora sempre a livello applicativo). Attualmente è una tecnologia ancora
-molto in fase di sviluppo e studio (nelle prime versione, i protocolli mancavano
-molto d'espressività: la sicurezza per esempio era fornita solo a basso livello).
-L'evoluzione che si immagina quindi per i WS è quella di far evolvere il
-sistema, come una composizione e coordinazione dei servizi, per poter aprire i
-WS ad una categoria di utenti più ampia. L'idea sarebbe quindi quella che, per
-ottenere un nuovo servizio, si compongano quelli precedenti. Per far ciò sono
-83
-stati introdotti nuovi linguaggi a flusso (Business Process Execution Language
-4WS: si possono mettere in sequenza, parallelo, in alternativa o in join) per
-i WS, che lavorano sempre ad un livello molto alto. L'estensione dei WS in
-`
-questa direzione è indicata come WS*. E una visione maggiormente orientata
-ad perseguire logiche di business.
+I protocolli realizzati dal W3C sono molto apprezzati da diverse organizzazioni, come le banche in Italia. Tuttavia,
+i WS presentano un alto overhead rispetto ad altre tecnologie (è possibile che non sia una comunicazione limitata a 
+due attori, e si lavora sempre a livello applicativo). Attualmente è una tecnologia ancora molto in fase di sviluppo 
+e studio (nelle prime versione, i protocolli mancavano molto d'espressività: la sicurezza per esempio era fornita 
+solo a basso livello).
+L'evoluzione che si immagina quindi per i WS è quella di far evolvere il sistema, come una composizione e coordinazione
+dei servizi, per poter aprire i WS ad una categoria di utenti più ampia. L'idea sarebbe quindi quella che, per
+ottenere un nuovo servizio, si compongano quelli precedenti. Per far ciò sono stati introdotti nuovi linguaggi a 
+flusso (Business Process Execution Language 4WS: si possono mettere in sequenza, parallelo, in alternativa o in join)
+per i WS, che lavorano sempre ad un livello molto alto. L'estensione dei WS in questa direzione è indicata come WS*. 
+E una visione maggiormente orientata ad perseguire logiche di business.
