--- a/Sections/CORBA.tex
+++ b/Sections/CORBA.tex
@@ -1,62 +1,50 @@
 \section{CORBA}
-CORBA è uno standard, specifica di un mw, nato dall'idea di mettere a dispoe
-sizione di 440 aziende una possibile soluzione per le loro esigenze!
-Essendo uno standard, quindi solo una specifica cartacea, si ha che esistono
-diverse implementazioni (IBM, Java, Orbix, Jacorb, . . . ), ma che rispettando le
-specifiche possono anche essere interoperabili fra di loro!
+CORBA è uno standard, specifica di un mw, nato dall'idea di mettere a disposizione di 440 aziende una possibile 
+soluzione per le loro esigenze!
+Essendo uno standard, quindi solo una specifica cartacea, si ha che esistono diverse implementazioni (IBM, Java, Orbix, 
+Jacorb...), ma che rispettando le specifiche possono anche essere interoperabili fra di loro!
 Un mw deve avere oggetti remoti, invocabili da diversi client su diverse macchine: il sistema di supporto deve essere
-quindi in grado di ottenere tutti i servizi
-conosciuti da parte del client. Si ha quindi una forte idea di razionalizzazione,
-l'obiettivo è superare tutti i problemi dell'eterogeneità (in CORBA: supporto
-per linguaggi ed ambienti diversi, definizione di interfacce per servizi e supporti
-per gli oggetti, . . . ).
-CORBA in particolare basala sua architettura sulla presenza di un broker,
-detto Object Request Broker : è infatti l'incarnazione di tutta l'architettura,
-perché fornisce il supporto alla comunicazione, il controllo degli oggetti, facilita
-la comunicazione, ed alloca gli oggetti. . . ), ovvero è il bus per l'interconnese
-sione!26 Una caratteristica importante degli ORB è che è prevista la possibilità
-di coordinarli, grazie alla definizione di uno standard preciso (non dipende quindi dalle varie implementazioni!). In
-questo modo, tutti i servizi riconosciuti da
-un ORB saranno riconosciuti da un altro, magari introdotto in un secondo
-momento27
-CORBA è un mw maturo, che presenza diversi servizi: per esempio vi sono
-le common facilities, che sono dei servizi utili per poter aiutare tutte le possibili
-applicazioni, in grado di fornire risposte ad esigenze specifiche. Corrisponde in
+quindi in grado di ottenere tutti i servizi conosciuti da parte del client. Si ha quindi una forte idea di 
+razionalizzazione, l'obiettivo è superare tutti i problemi dell'eterogeneità (in CORBA: supporto per linguaggi ed 
+ambienti diversi, definizione di interfacce per servizi e supporti per gli oggetti...).
+CORBA in particolare basa la sua architettura sulla presenza di un broker, detto \textit{Object Request Broker}: è 
+infatti l'incarnazione di tutta l'architettura, perché fornisce il supporto alla comunicazione, il controllo degli 
+oggetti, facilita la comunicazione, ed alloca gli oggetti...), ovvero è il bus per 
+l'interconnessione!\footnote{Tuttavia, CORBA resta solo una specifica: come debba essere fatto il deployment
+dell'ORB è in realtà a carico delle singole implementazioni} Una caratteristica importante degli ORB è che è prevista la 
+possibilità di coordinarli, grazie alla definizione di uno standard preciso (non dipende quindi dalle varie 
+implementazioni!). In questo modo, tutti i servizi riconosciuti da un ORB saranno riconosciuti da un altro, magari 
+introdotto in un secondo momento\footnote{Questo servizio per esempio è più potente del servizio di nomi dei WS, che è 
+solo locale}.
+CORBA è un mw maturo, che presenta diversi servizi: per esempio vi sono le common facilities, che sono dei servizi utili 
+per poter aiutare tutte le possibili applicazioni, in grado di fornire risposte ad esigenze specifiche. Corrisponde in
 tutto e per tutto al terzo livello dei mw.
-I servizi veramente importanti, necessari e presenti in ogni implementazione
-sono gli object (o CORBA) services, che permettono di fornire servizi utili per gli
-oggetti (il loro trasporto, la funzione di narrowing, . . . ). Fra quelle fondamentali
-vi sono:
-$\bullet$ Servizio di nomi : rispetto a quello definito per Java RMI, è molto più coe
-ordinato, e presenta anche delle varianti. Infatti, oltre al normale servizio
-di nomi (per cui si deve conoscere il nome logico del servizio) vi è anche la
-possibilità di definire un servizio di trading, che funziona come le pagine
-gialle, ricercando servizi e non nomi!
-$\bullet$ Event e notification: sono sistemi meno orientati agli oggetti, ma che
-quindi aumentano le capacità del sistema! Infatti, oltre alla maniera sina
-crona/asincrona bloccante, in questo modo si possono introdurre sistemi
-molto più flessibili.
-26 Tuttavia, CORBA resta solo una specifica: come debba essere fatto il deployment
-dell'ORB è in realtà a carico delle singole implementazioni
-27 Questo servizio per esempio è più potente del servizio di nomi dei WS, che è solo locale
-e u
-62
+I servizi veramente importanti, necessari e presenti in ogni implementazione sono gli object (o CORBA) services, che 
+permettono di fornire servizi utili per gli oggetti (il loro trasporto, la funzione di narrowing...). 
+Fra quelle fondamentali vi sono:
+\begin{itemize}
+ \item \textit{Servizio di nomi}: rispetto a quello definito per Java RMI, è molto più coordinato, e presenta anche 
+ delle varianti. Infatti, oltre al normale servizio di nomi (per cui si deve conoscere il nome logico del servizio) vi 
+ è  anche la possibilità di definire un servizio di trading, che funziona come le pagine gialle, ricercando servizi e 
+ non nomi!
+ \item \textit{Event e notification}: sono sistemi meno orientati agli oggetti, ma che quindi aumentano le capacità del 
+ sistema! Infatti, oltre alla maniera sincrona/asincrona bloccante, in questo modo si possono introdurre sistemi
+ molto più flessibili.
+\end{itemize}
 Altri servizi possono essere specifici a determinati domini lavorativi, altri potrebbero invece dipendere dal tipo di
 applicazione che si sta sviluppando.
 Una caratteristica che è stata sempre trascurata è la sicurezza: questa però è introducibile, visto che CORBA prevede 
 la possibilità di utilizzare degli interceptor!
-CORBA è definito da una serie di componenti: oltre all'ORB (uno dei
-principali), vi sono:
-$\bullet$ L'IDL, ovvero un linguaggio per definire le interfacce dei servizi.
-$\bullet$ Il Portable Object Adapater : si tratta di un sistema per incapsulare gli
-oggetti e per facilitare il compito del gestore (nel trasporto, nel supporto
-
-alla QoS, . . . ). È un sistema che viene aggiunto quindi dal supporto!
-$\bullet$ L'Interface Repository, che è un sistema simile ad un name server, dove si
-possono ritrovare appunto le interfacce dei servizi disponibili.
-$\bullet$ Vi sono quindi dei sistemi per richiamare i servizi in maniera statica e
-dinamica
-$\bullet$ E infine vi sono degli appositi protocolli per la comunicazione ed integrazione fra ORB diversi.
+CORBA è definito da una serie di componenti: oltre all'ORB (uno dei principali), vi sono:
+\begin{itemize}
+ \item L'\textit{IDL}, ovvero un linguaggio per definire le interfacce dei servizi.
+ \item Il \textit{Portable Object Adapater}: si tratta di un sistema per incapsulare gli oggetti e per facilitare il 
+compito del  gestore (nel trasporto, nel supporto alla QoS...). È un sistema che viene aggiunto quindi dal supporto!
+ \item L'\textit{Interface Repository}, che è un sistema simile ad un name server, dove si possono ritrovare appunto le 
+ interfacce dei servizi disponibili.
+ \item Vi sono quindi dei sistemi per richiamare i servizi in maniera statica e dinamica
+ \item E infine vi sono degli appositi protocolli per la comunicazione ed integrazione fra ORB diversi.
+\end{itemize}
 \subsection{L'ORB}
 L'ORB è il cuore del sistema, per comunicare si usa sempre l'ORB. Si potrebbe
 quindi pensare che è un collo di bottiglia, ma in realtà la comunicazione presente
